objects/Utilization_Data_Object__c.object
<CustomObject>
    <fields>
        <fullName>ABC_Contact_Counter_ID__c</fullName>
        <formula>ABC_Contact__r.Counter_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABC Contact Counter ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABC Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Teleconference Utilization (ABC Contact)</relationshipLabel>
        <relationshipName>Teleconference_Utilization1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CEO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CEO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CXO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Teleconference Utilization (Contact)</relationshipLabel>
        <relationshipName>Teleconference_Utilization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_Contact_ID__c</fullName>
        <formula>Contact__r.Counter_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventID__c</fullName>
        <label>EventID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Impact_Value_Score__c</fullName>
        <description>Created for CR-20160303-9666.</description>
        <inlineHelpText>Evaluation question: Applying the ideas from this content will yield financial value for my organization.</inlineHelpText>
        <label>Financial Impact Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institution_Counter_ID__c</fullName>
        <formula>Institution__r.Counter_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution Counter ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Teleconference Utilization (Institution)</relationshipLabel>
        <relationshipName>Teleconference_Utilization1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Point_of_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Point of Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Teleconference Utilizations</relationshipLabel>
        <relationshipName>Teleconference_Utilizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParticipationCount__c</fullName>
        <label>ParticipationCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payer_Institution_Counter_ID__c</fullName>
        <formula>Payer_Institution__r.Counter_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Institution Counter ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Teleconference Utilization (Payer Institution)</relationshipLabel>
        <relationshipName>Teleconference_Utilization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Improvement_Value_Score__c</fullName>
        <description>Created for CR-20160303-9666.</description>
        <inlineHelpText>Evaluation Question: Applying the ideas from this content will advance our performance against key organizational goals.</inlineHelpText>
        <label>Performance Improvement Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Effectiveness_Value_Score__c</fullName>
        <description>Created for CR-20160303-9666.</description>
        <inlineHelpText>Evaluation Question: applying the ideas from this content will make me more effective at my job.</inlineHelpText>
        <label>Personal Effectiveness Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Decisions_Value_Score__c</fullName>
        <description>Created for CR-20160303-9666.</description>
        <inlineHelpText>Evaluation Question: Applying the ideas from this content will improve the quality of my strategic decisions.</inlineHelpText>
        <label>Strategic Decisions Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsert_ID__c</fullName>
        <externalId>true</externalId>
        <label>Upsert ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Utilization_Metric__c</fullName>
        <label>Utilization Metric</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Teleconference Utilization</label>
    <nameField>
        <label>Teleconference Utilization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teleconference Utilization</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>